[package]
name = "devtools"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
publish = false

[lib]
name = "devtools"
path = "lib.rs"

[dependencies]
devtools_traits = {path = "../devtools_traits"}
encoding = "0.2"
hyper = "0.10"
hyper_serde = {git = "https://github.com/avadacatavra/hyper_serde.git", branch = "hyper-bump" }
ipc-channel = "0.7"
log = "0.3.5"
msg = {path = "../msg"}
plugins = {path = "../plugins"}
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
time = "0.1"
