[package]
name = "net"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
publish = false

[lib]
name = "net"
path = "lib.rs"

[dependencies]
brotli = "1.0.6"
content-blocker = "0.2.3"
cookie = {version = "0.4", features = ["serialize-serde"]}
devtools_traits = {path = "../devtools_traits"}
flate2 = "0.2.0"
hyper = "0.10"
hyper_serde = {git = "https://github.com/avadacatavra/hyper_serde.git", branch = "hyper-bump" }
hyper-openssl = "0.2.2"
immeta = "0.3.1"
ipc-channel = "0.7"
lazy_static = "0.2"
log = "0.3.5"
matches = "0.1"
mime = "0.2.1"
mime_guess = "1.8.0"
msg = {path = "../msg"}
net_traits = {path = "../net_traits"}
openssl = "0.9"
plugins = {path = "../plugins"}
profile_traits = {path = "../profile_traits"}
rustc-serialize = "0.3"
servo_config = {path = "../config"}
servo_url = {path = "../url"}
threadpool = "1.0"
time = "0.1.17"
unicase = "1.4.0"
url = {version = "1.2", features = ["heap_size", "rustc-serialize"]}
uuid = {version = "0.4", features = ["v4"]}
websocket = {git = "https://github.com/avadacatavra/rust-websocket.git", branch = "hyper-bump" }

[dependencies.webrender_traits]
git = "https://github.com/servo/webrender"
default-features = false
features = ["serde_derive", "ipc"]

[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.dependencies]
tinyfiledialogs = "2.5.9"
