[package]
name = "net_traits"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
publish = false

[lib]
name = "net_traits"
path = "lib.rs"

[dependencies]
cookie = {version = "0.4", features = ["serialize-rustc"]}
heapsize = "0.3.0"
heapsize_derive = "0.1"
hyper = "0.10"
hyper_serde = {git = "https://github.com/avadacatavra/hyper_serde.git", branch = "hyper-bump" }
image = "0.12"
ipc-channel = "0.7"
lazy_static = "0.2"
log = "0.3.5"
msg = {path = "../msg"}
num-traits = "0.1.32"
serde = "0.9"
serde_derive = "0.9"
servo_config = {path = "../config", features = ["servo"]}
servo_url = {path = "../url", features = ["servo"]}
url = {version = "1.2", features = ["heap_size"]}
uuid = {version = "0.4", features = ["v4", "serde"]}
websocket = {git = "https://github.com/avadacatavra/rust-websocket.git", branch = "hyper-bump" }

[dependencies.webrender_traits]
git = "https://github.com/servo/webrender"
default-features = false
features = ["serde_derive", "ipc"]
