[package]
name = "net_tests"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"

[lib]
name = "net_tests"
path = "lib.rs"
doctest = false

[dependencies]
content-blocker = "0.2.3"
cookie = "0.4"
devtools_traits = {path = "../../../components/devtools_traits"}
flate2 = "0.2.0"
hyper = "0.10"
hyper_serde = {git = "https://github.com/avadacatavra/hyper_serde.git", branch = "hyper-bump" }
ipc-channel = "0.7"
msg = {path = "../../../components/msg"}
net = {path = "../../../components/net"}
net_traits = {path = "../../../components/net_traits"}
plugins = {path = "../../../components/plugins"}
profile_traits = {path = "../../../components/profile_traits"}
servo_config = {path = "../../../components/config"}
time = "0.1"
unicase = "1.0"
url = {version = "1.2", features = ["heap_size"]}
servo_url = {path = "../../../components/url"}
